LEP-419 under 18 (non means tested) (#470)
* LEP-419 under 18 non means tested
